--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
-body{
+html,body{
     background-color:lightblue;
     color:black;
-
+    width:100%;
 }
 h1{
     margin-top:3%;
     text-align: center;
-
 }
 #recipe-form,
 p,h2,
@@ -17,4 +16,5 @@ p,h2,
 
 #recipe-form {
     margin: 0 auto;
-    max-width: 400px;
+    max-width: 400px;}
+
